@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: conf_parse.y,v 1.10 2003/07/13 01:20:00 ezk Exp $
+ * $Id: conf_parse.y,v 1.11 2003/07/13 19:11:19 ezk Exp $
  *
  */
 
@@ -69,7 +69,7 @@ voidp alloca();
 #endif /* not __GNUC__ */
 
 extern char *yytext;
-extern int yylineno;
+extern int ayylineno;
 extern int yylex(void);
 
 static int yyerror(const char *s);
@@ -81,7 +81,7 @@ static char *header_section = NULL; /* start with no header section */
 #define PARSE_DEBUG 0
 
 #if PARSE_DEBUG
-# define dprintf(f,s) fprintf(stderr, (f), yylineno, (s))
+# define dprintf(f,s) fprintf(stderr, (f), ayylineno, (s))
 # define amu_return(v)
 #else /* not PARSE_DEBUG */
 # define dprintf(f,s)
@@ -171,7 +171,7 @@ static int
 yyerror(const char *s)
 {
   fprintf(stderr, "AMDCONF: %s on line %d (section %s)\n",
-	  s, yylineno,
+	  s, ayylineno,
 	  (header_section ? header_section : "null"));
   exit(1);
   return 1;	/* to full compilers that insist on a return statement */
