@@ -1,3 +1,13 @@
+2003-07-13  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* fsinfo/fsinfo.h, fsinfo/fsinfo.c (fsi_get_args): don't use
+	yywrap() if it doesn't exist.
+
+	* amd/conf_parse.y, amd/conf_tok.l, fsinfo/fsi_gram.y,
+	fsinfo/fsi_lex.l: fixes to support old flex 2.5.4, as well as the
+	newer flex 2.5.31 (beta development).  These include resolving
+	conflicts with yylineno, unput() vs. nounput(), etc.
+
 2003-07-13  Ion Badulescu  <lionut@gonzales.badula.org>
 
 	* amd/amfs_generic.c (amfs_cont): check for (am_error > 0) before
